add code, simple styling to explain different css pages priorities, working product

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
+//This is just for the header portion
+<body>
+
   <h1>
     Welcome to {{ title }}!
   </h1>
 
-  <!-- <recipes-component></recipes-component> -->
+  <app-recipes></app-recipes>
+</body>
