--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/* This will style the rest of the background */
+body {
+  background-color: black;
+}
