--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,18 @@
-//This is just for the header portion
+<!-- This is just for the header portion -->
 <body>
 
   <h1>
     Welcome to {{ title }}!
   </h1>
+  <h3>{{selectedRecipe.description}}</h3>
+  <h3>Edit Task</h3>
+  <label>Enter Task Description:</label>
+  <input [(ngModel)]="selectedRecipe.description">
+  <label>Enter Task Priority (1-3):</label>
+  <br>
+  <input type="radio" [(ngModel)]="selectedRecipe.priority" value="1">1 (Low Priority)<br>
+  <input type="radio" [(ngModel)]="selectedRecipe.priority" value="2">2 (Medium Priority)<br>
+  <input type="radio" [(ngModel)]="selectedRecipe.priority" value="3">3 (High Priority)
 
   <app-recipes></app-recipes>
 </body>
